--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,46 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
+      <div class="titleicon">
+          <img src="../../assets/imgs/Logo.png" width="100px"/>
+      </div>
+      <ion-buttons end>
+          <button ion-button icon-only (click)="cart()">
+              <ion-icon name="cart" color="dark"></ion-icon>
+          </button>
+      </ion-buttons>
   </ion-navbar>
+  <ion-toolbar>
+      <ion-searchbar (ionInput)="getItems($event)" placeholder="What would you like to eat ?"></ion-searchbar>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<ion-content class="card-background-page" padding>
+    <ion-grid>
+        <ion-row>
+            <ion-col col-6 col-sm>
+                <ion-card>
+                    <img src="../../assets/imgs/categories/martabak.png"/>
+                    <div class="card-title">Martabak</div>
+                  </ion-card>
+            </ion-col>
+            <ion-col col-6 col-sm>
+                <ion-card>
+                    <img src="../../assets/imgs/categories/sate.png"/>
+                    <div class="card-title">Sate</div>
+                  </ion-card>
+            </ion-col>
+            <ion-col col-6 col-sm>
+                <ion-card>
+                    <img src="../../assets/imgs/categories/mie-ayam.png"/>
+                    <div class="card-title">Mie Ayam</div>
+                  </ion-card>
+            </ion-col>
+            <ion-col col-6 col-sm>
+                <ion-card>
+                    <img src="../../assets/imgs/categories/bakmie.png"/>
+                    <div class="card-title">Bakmie</div>
+                  </ion-card>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
