Using firebase repo to store images

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
       <div class="titleicon">
-          <img src="../../assets/imgs/logo-white.png" width="100px"/>
+          <img src="assets/imgs/logo-white.png" width="100px"/>
       </div>
   </ion-navbar>
 
