--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,28 +1,28 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
+    <button ion-button menuToggle *ngIf="auth.getUserInfo().user_type == 'user'">
       <ion-icon name="menu" color="dark"></ion-icon>
     </button>
       <div class="titleicon">
-          <img src="../../assets/imgs/logo-white.png" width="100px"/>
+          <img src="assets/imgs/logo-white.png" width="100px"/>
       </div>
-      <ion-buttons end>
+      <ion-buttons end *ngIf="auth.getUserInfo().user_type == 'user'">
           <button ion-button icon-only (click)="cart()">
               <ion-icon name="cart" color="dark"></ion-icon>
           </button>
       </ion-buttons>
   </ion-navbar>
-  <ion-toolbar>
+  <ion-toolbar *ngIf="auth.getUserInfo().user_type == 'user'">
       <ion-searchbar (ionInput)="getItems($event)" placeholder="What would you like to eat ?"></ion-searchbar>
     </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-    <ion-grid>
+    <ion-grid *ngIf="auth.getUserInfo().user_type == 'user'">
         <ion-row>
             <ion-col col-6 col-sm *ngFor="let category of categories; index as i">
                 <ion-card (click)="detailMerchant($event, category)">
-                  <img src="../../assets/imgs/categories/{{category.icon}}.png"/>
+                  <img src="{{category.icon}}"/>
                   <ion-card-content>{{category.title}}</ion-card-content>
                 </ion-card>
             </ion-col>
