--- a/src/pages/merchants-menus/merchants-menus.html
+++ b/src/pages/merchants-menus/merchants-menus.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-navbar>
       <div class="titleicon">
-          <img src="../../assets/imgs/logo-white.png" width="100px"/>
+          <img src="assets/imgs/logo-white.png" width="100px"/>
       </div>
-      <ion-buttons end>
+      <ion-buttons end *ngIf="auth.getUserInfo().user_type == 'user'">
           <button ion-button icon-only (click)="cart()">
               <ion-icon name="cart"></ion-icon>
           </button>
@@ -15,7 +15,7 @@
 <ion-content class="merchant-menu-content" padding>
     <ion-row class="logo-row">
       <ion-col width-100>
-        <img width="100%" height="40%" src="../../assets/imgs/categories/{{selectedMerchant.icon}}.png"/>
+        <img width="100%" height="40%" src="{{selectedMerchant.icon}}"/>
       </ion-col>
     </ion-row>
     
@@ -41,7 +41,7 @@
     <ion-list>
       <ion-item *ngFor="let menu of menus; index as i">
         <ion-thumbnail item-start>
-          <img src="../../assets/imgs/categories/{{menu.photo}}.png">
+          <img src="{{menu.photo}}">
         </ion-thumbnail>
         <h2>{{menu.title}}</h2>
         <p>{{menu.description}}</p>
