--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle *ngIf="auth.getUserInfo().user_type == 'user'">
+    <button ion-button menuToggle>
       <ion-icon name="menu" color="dark"></ion-icon>
     </button>
       <div class="titleicon">
