--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -17,15 +17,22 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content class="home-content" padding>
-    <ion-grid *ngIf="auth.getUserInfo().user_type == 'user'">
-        <ion-row>
-            <ion-col col-6 col-sm *ngFor="let merchant of merchants; index as i">
-                <ion-card (click)="merchantMenus($event, merchant)">
-                  <img src="{{merchant.icon}}"/>
-                  <ion-card-content>{{merchant.name}}</ion-card-content>
-                </ion-card>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+<ion-content padding>
+    <div *ngIf="searching" class="spinner-container">
+        <ion-spinner></ion-spinner>
+    </div>
+    <ion-list>
+      <ion-item *ngFor="let menu of menus; index as i">
+        <ion-thumbnail item-start>
+          <img src="{{menu.photo}}">
+        </ion-thumbnail>
+        <h2>{{menu.title}}</h2>
+        <p>{{menu.description}}</p>
+        <br/>
+        <h2>Rp.{{menu.price | number:0}}</h2>
+        <button ion-button clear item-end (click)="addToCart(menu)">
+            <ion-icon name="add-circle" color="danger"></ion-icon>
+        </button>
+      </ion-item>
+    </ion-list>
 </ion-content>
