--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -70,7 +70,7 @@
 </ion-content>
 
 <ion-footer>
-    <ion-toolbar color="secondary">
-        <button ion-button clear full large (click)="showConfirm(order)">ORDER</button>
+    <ion-toolbar>
+        <button ion-button class="order-btn" clear full (click)="showConfirm(order)">ORDER</button>
     </ion-toolbar>
 </ion-footer>
